# lcg

./: .gitignore  README.md  bumpver.toml  camera_device.py  ccd_config.toml  config.toml  gui.py  gui2.py  leed_device.py  pyproject.toml  requirements.txt  save_directory.json  tkinter_new_dir.py
.github/workflows/: python-publish.yml
Flask_GUI/: index.html  main.py
TIS/: TIS.py
calibrations/: calibration.csv  calibration2.csv
